--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="home">home</string>
     <string name="favourites">favourites</string>
     <string name="settings">settings</string>
+    <string name="add_your_animal">Add Your Animal!</string>
+    <string name="enter_name_your_animal">Enter name your animal</string>
+    <string name="enter_url_about_photo_your_animal">Enter URL about photo your animal</string>
+    <string name="enter_short_description_for_your_animal">Enter short description for your animal</string>
+    <string name="preview_animal">Preview animal</string>
 </resources>
