Редактирование неточностй. Часть 8 + полноэкранный режим

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,5 @@
     <string name="preview_animal">Preview animal</string>
     <string name="addanimal">AddAnimal!</string>
     <string name="night_themes">Night themes</string>
+    <string name="welcome_to_zoopedia">Welcome to Zoopedia!</string>
 </resources>
